// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation AND YET here is another 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-31T17:56-04:00",
  "currentFileTime": 132616869821804560,
  "dayOfTheWeek": "Wednesday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-90",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND YET here is another 2`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-31T17:56-04:00",
  "currentFileTime": 132616869824304750,
  "dayOfTheWeek": "Wednesday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-90",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation Hi here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation should not allow external requests in CI 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-31T21:56Z",
  "currentFileTime": 132617013814616860,
  "dayOfTheWeek": "Wednesday",
  "isDayLightSavingsTime": false,
  "ordinalDate": "2021-90",
  "serviceResponse": null,
  "timeZoneName": "UTC",
  "utcOffset": "00:00:00",
}
`;
